[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pympljstyle"
dynamic = ["version"]
description = 'Apply journal styles and requirements to `matplotlib` figures'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Damien Mannion", email = "damien@djmannion.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "matplotlib",
  "pint",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "mypy",
]
interactive = [
  "ipython",
  "pickleshare",
]

[project.urls]
Documentation = "https://github.com/unknown/pympljstyle#readme"
Issues = "https://github.com/unknown/pympljstyle/issues"
Source = "https://github.com/unknown/pympljstyle"

[tool.hatch.version]
path = "src/pympljstyle/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.interactive]
features = [
  "dev",
  "interactive",
]
